# todoapi

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
src/: db.rs  main.rs  model.rs  routes.rs  schema.rs
src/tasks/: routes.rs
src/user/: auth.rs
