[package]
name = "todoapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
chrono = "0.4.26"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.7"
jsonwebtoken = "8.3.0"
rocket = { version = "=0.5.0-rc.3", features = [ "json" ]}
